# kangaroo

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTEXT.md  EXECUTOR_ASYNC_REDESIGN.md  IO_PLAN.md  LICENSE  PLAN.md  PLAN_HPX_MULTI_LOCALITY.md  README.md  TRACKED_GAPS.md  main.py  pixi.toml  pyproject.toml
.github/workflows/: close-all-prs.yaml  docs.yml
analysis/: __init__.py  amr_coverage.py  buffer.py  ctx.py  dashboard.py  dataset.py  kernel_params.py  ops.py  parthenon_hdf5.py  pipeline.py  plan.py  plan_codec.py  plotfile.py  reduction.py  runmeta.py  runtime.py
analysis/fb/: AmrSubboxPackParams.py  AmrSubboxPackParams.pyi  BufferSpec.py  BufferSpec.pyi  CoveredBox.py  CoveredBox.pyi  CoveredBoxList.py  CoveredBoxList.pyi  CylindricalFluxParams.py  CylindricalFluxParams.pyi  DepKind.py  DepKind.pyi  DependencyRule.py  DependencyRule.pyi  Domain.py  Domain.pyi  DynamicUpperBound.py  DynamicUpperBound.pyi  DynamicUpperBoundKind.py  DynamicUpperBoundKind.pyi  ExecPlane.py  ExecPlane.pyi  FieldExprParams.py  FieldExprParams.pyi  FieldRef.py  FieldRef.pyi  FiniteOnlyParams.py  FiniteOnlyParams.pyi  FluxSurfaceParams.py  FluxSurfaceParams.pyi  GradStencilParams.py  GradStencilParams.pyi  GraphReduceSpec.py  GraphReduceSpec.pyi  Histogram1DParams.py  Histogram1DParams.pyi  Histogram2DParams.py  Histogram2DParams.pyi  InitPolicy.py  InitPolicy.pyi  (+38 more)
batch/: make_cylindrical_flux_p2.submit  make_cylindrical_flux_p3.submit  make_flux_p2.submit  make_projection_p2.submit  make_projection_p3.submit  make_toomre_q_phase0.submit
cpp/: CMakeLists.txt
cpp/include/kangaroo/: adjacency.hpp  amr_patch_codec.hpp  backend_memory.hpp  backend_openpmd.hpp  backend_parthenon.hpp  backend_plotfile.hpp  buffer_resolution.hpp  chunk_buffer.hpp  data_service.hpp  data_service_local.hpp  dataset_backend.hpp  default_kernels.hpp  executor.hpp  kernel.hpp  kernel_params.hpp  kernel_registry.hpp  param_decode.hpp  plan_decode.hpp  plan_ir.hpp  plotfile_reader.hpp  runmeta.hpp  runtime.hpp
cpp/proto/: perfetto_trace_minimal.proto
cpp/schema/: amr_patch.fbs  plan.fbs
cpp/src/: adjacency.cpp  amr_patch_codec.cpp  backend_memory.cpp  backend_openpmd.cpp  backend_parthenon.cpp  backend_plotfile.cpp  bindings.cpp  buffer_resolution.cpp  chunk_buffer.cpp  core_kernels.cpp  data_service_local.cpp  dataset_backend.cpp  default_kernel_families.hpp  default_kernel_support.hpp  default_kernels.cpp  executor.cpp  flux_kernels.cpp  grid_kernels.cpp  histogram_kernels.cpp  kangaroo_dashboard_clay.cpp  kernel_registry.cpp  param_decode.cpp  particle_kernels.cpp  plan_decode_flatbuffer.cpp  plan_decode_msgpack.cpp  plotfile_bindings.cpp  plotfile_reader.cpp  reduction_kernels.cpp  runtime.cpp
cpp/src/kernels/: amr_sampling_support.cpp  amr_sampling_support.hpp  core_kernels.cpp  default_kernel_families.hpp  default_kernels.cpp  flux_geometry_support.cpp  flux_geometry_support.hpp  flux_kernels.cpp  grid_kernels.cpp  histogram_kernels.cpp  internal.hpp  kernel_buffer_support.cpp  kernel_buffer_support.hpp  kernel_param_support.cpp  kernel_param_support.hpp  particle_kernel_support.cpp  particle_kernel_support.hpp  particle_kernels.cpp  particle_misc.cpp  plotfile_kernel_support.cpp  plotfile_kernel_support.hpp  plotfile_load.cpp  projection_kernel_support.cpp  projection_kernel_support.hpp  reduction_kernels.cpp  register.cpp  toomre_kernels.cpp  uniform_slice_misc.cpp
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md
kangaroo/: __init__.py  array.py  client.py  config.py  dataset.py  results.py
kangaroo/backends/: __init__.py
kangaroo/ir/: __init__.py
kangaroo/runtime/: __init__.py
plans/: CHUNK_BUFFER_IMPLEMENTATION_PLAN.md  FLUX_SURFACE_INTEGRATION_OPERATOR_PLAN.md  KANGAROO_VS_YT_PERFORMANCE_REPORT.md  PLAN.md  PLOTFILE_IO_EXECUTOR_REDESIGN_PLAN.md  PYTHON_API_REDESIGN.md  STREAMING_EXECUTOR_IMPLEMENTATION_PLAN.md  TRACKED_GAPS.md
scripts/: detect_hpx.sh  kangaroo_dashboard.py  plot_cylindrical_flux_surface_energy_flux.py  plot_cylindrical_flux_surface_mass_flux.py  plot_cylindrical_flux_surface_passive_scalar_flux.py  plot_flux_surface_energy_flux.py  plot_flux_surface_mass_flux.py  plot_flux_surface_passive_scalar_flux.py  plotfile_cylindrical_flux_surface.py  plotfile_fab_minmax.py  plotfile_flux_surface.py  plotfile_particle_mass_histogram.py  plotfile_projection.py  plotfile_projection_cic_stellar.py  plotfile_slice.py  plotfile_slice_operator_demo.py  plotfile_slice_yt.py  plotfile_toomre_q.py  slice_operator_demo.py  smoke_demo.py
scripts/utils/: CHUNK_BUFFER_BENCHMARKS.md  benchmark_instant_io_speedup.py  chunk_buffer_dtype_pack_benchmark.cpp  chunk_buffer_scalar_proxy_codegen.cpp  configure_external_hpx.sh  configure_spack_hpx.sh  detect_hpx.sh  hpxrun_pixi.sh  hpxrun_spack_hpx.sh  io_slowdown_from_events.py  pixi_tcmalloc.sh  plotfile_io_microbench.py  print_hpx_config.py  run_chunk_buffer_compile_benchmark.sh
spec/: README.md  backends-and-io.md  core-architecture.md  dashboard-and-cli.md  data-models.md  design-overview.md  glossary.md  implementation-pitfalls.md  operators.md  performance-requirements.md  python-api.md  validation-and-errors.md
tests/: conftest.py  test_amr_coverage.py  test_amr_gradient.py  test_amr_vorticity.py  test_chunk_buffer.py  test_cli_descriptor_api.py  test_dashboard_dag.py  test_data_service_async.py  test_dataset_backend.py  test_executor_async_graph_reduce.py  test_field_expr_ops.py  test_flux_surface_integral.py  test_graph_reduction.py  test_high_level_api.py  test_histogram_ops.py  test_kernel_catalog.py  test_kernel_registry_metadata.py  test_kernel_support.py  test_medium_spec_gaps.py  test_parthenon_backend.py  test_parthenon_hdf5_reader.py  test_particle_api.py  test_particle_runtime_kernels.py  test_pipeline_api.py  test_plotfile_flux_surface.py  test_plotfile_reader.py  test_projection_op.py  test_python_packaging.py  test_runtime_output_visibility.py  test_smoke_demo.py  test_streaming_executor.py  test_subbox_fetch.py  test_toomre_q.py  test_uniform_slice_runtime_kernels.py
(+16 files in other folders)
