[project]
name = "kangaroo"
version = "0.1.0"
description = "Distributed task runtime prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["msgpack"]

[build-system]
requires = ["scikit-build-core>=0.9.10", "nanobind>=1.9"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.22"
wheel.packages = ["analysis"]
