[project]
name = "kangaroo"
version = "0.1.0"
description = "Distributed task runtime prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.4",
    "psutil>=5.9",
]

[build-system]
requires = []
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.22"
wheel.packages = ["analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
